# ShaderLLM

./: .geminiignore  .gitignore  Build-Slang.ps1  CMakeLists.txt  CMakePresets.json  GEMINI.md  build_opt.bat  entities.json  index.md  log.md  nvidia_fix.json  verify_build.bat
src/: main.cpp  main_cuda.cpp  main_l0.cpp  main_opt.cpp  main_sycl.cpp  main_tma.cpp  main_uhd.cpp
src/engine/: CudaEngine.hpp  EngineTest.cpp  GemmaVocab.hpp  NcaEngine.hpp  NcaKernel.cu  RetinaState.hpp  VulkanContext.hpp  VulkanEngine.hpp  VulkanEngineOpt.hpp  VulkanEngineTma.hpp  VulkanPipeline.hpp  check_devices.cpp
src/shaders/: coopmat_test.comp  nca_decode.slang  nca_evolve.comp  nca_inject.slang  nca_l0.comp  nca_ple_gate.slang  nca_rmsnorm.slang  nca_spatial_agg.slang  nca_tanh.comp  nca_tma_evolve.slang  nca_uhd.comp  verify_flow.comp  verify_flow_fp32.comp
src/utils/: HilbertCurve.hpp  check_l0_specs.cpp  check_rtx_specs.cpp  check_uhd_specs.cpp  check_vulkan_limits.cpp  precision_test.cpp  verify_data_flow.cpp  verify_ple_table.cpp
training/: distill_gemma_real.py  distill_m10_5.py  distillation_pipeline.py  export_embeddings.py  export_ple_weights.py  export_weights.py  extract_features.py  mini_distill.py  train_offline.py
training/skills/slang-expert/: SKILL.md
training/skills/slang-expert/references/: example_reference.md  tma_spec.md
training/skills/slang-expert/scripts/: compile_slang.cjs  example_script.cjs
